--- a/assets/scss/sections/_locale.scss
+++ b/assets/scss/sections/_locale.scss
@@ -1,5 +1,5 @@
 .dropdown-wrapper {
-	.dropdown-button {
+	.dropdown-button.dropdown-toggle {
 		background: #ffffff;
 		background: -moz-linear-gradient(-45deg, #ffffff 13%, #b5ddff 47%, #82f2ff 53%, #ffffff 92%);
 		background: -webkit-linear-gradient(-45deg, #ffffff 13%,#b5ddff 47%,#82f2ff 53%,#ffffff 92%);
@@ -11,10 +11,14 @@
 		color: #5A5A5A;
 		padding: 1px 10px;
 	}
+	.dropdown-button.needsclick {
+	}
 	.dropdown-button:hover {
 		-webkit-filter: brightness(90%);
 		filter: brightness(90%);
 	}
+
+
 	.dropdown-menu {
 		background: white;
 		width: 246px;
